ajout du formulaire d ajout de location

--- a/src/sass/partials/_form.scss
+++ b/src/sass/partials/_form.scss
@@ -1,6 +1,7 @@
 @import '../mixins/button';
 
-@mixin form {
+@mixin form($form_width) {
+    min-width: $form_width;
     .inputBox {
         position: relative;
         width: 100%;
