cards plus jolies

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,7 @@ $tertiary-color : rgba(134, 46, 111, 0.469);
 @import './partials/main';
 @import './partials/header';
 @import './partials/footer';
+@import './partials/cards';
 
 
 body{
