--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,8 +7,10 @@ $tertiary-color : rgba(134, 46, 111, 0.469);
 @import './partials/footer';
 @import './partials/cards';
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 body{
     background-color: $primary-color;
+    font-family: 'Roboto', sans-serif;
 }
 
