--- a/src/sass/mixins/_button.scss
+++ b/src/sass/mixins/_button.scss
@@ -26,6 +26,7 @@
     }
     button:disabled{
         background-color: $disabled-color;
+        cursor: not-allowed;
     }
     button:not(:disabled):active {
         position:relative;
