--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -1,5 +1,7 @@
 @import "./form";
 
+@import "./banner";
+
 main {
         display: flex;
         justify-content: center;
@@ -14,5 +16,8 @@ main {
         &_form {
               @include form(40vh)
         }   
-    }   
+    }  
+    .banner{
+        @include banner()
+    }
 }
