--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -1,4 +1,6 @@
 @import "./form";
+@import "./cards";
+
 
 main {
         display: flex;
@@ -17,5 +19,12 @@ main {
         &_form {
               @include form(40vh)
         }   
+    }
+    .card-container {
+        display: flex; 
+        flex-wrap: wrap; 
+        justify-content: space-around;
+        align-items: center;
+        @include card() 
     }   
 }
