--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -16,5 +16,6 @@ $tertiary-color : rgba(134, 46, 111, 0.469);
 body{
     background-color: $primary-color;
     font-family: 'Roboto', sans-serif;
+    margin: 0 auto;
 }
 
