--- a/src/sass/partials/_navbar.scss
+++ b/src/sass/partials/_navbar.scss
@@ -20,7 +20,8 @@
         font-size: 25px;
         text-decoration: none;
         color: aliceblue;
-        margin-bottom: 12px;
+        display: flex;
+        align-items: center;
         margin-left: 160px;
       }
   
@@ -32,7 +33,8 @@
   
         .nav-item {
           margin-right: 10px;
-          margin-top: 6px;
+          display: flex;
+          align-items: center;
           font-size: 19px;
         }
         
