--- a/src/sass/partials/_banner.scss
+++ b/src/sass/partials/_banner.scss
@@ -1,24 +1,20 @@
 
 @mixin banner() {
-  .banner {
     width: auto;
-    overflow: hidden;
     position: relative;
-  }
+    overflow: hidden;
   &_text {
     color: #fff;
-    position: absolute; 
-    font-size: 30px;
-    top: 50%; 
-    left: 20%;
-    transform: translate(-50%, -50%);
+    position: absolute;
+    font-size: 2em;
+    top: 3em; 
+    left: 3em;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
-    padding: 10px;
-    z-index: 1;
   }
   &_img {
-    max-width: 100%;
-    clip-path: polygon(0 30%, 100% 30%, 100% 90%, 0 90%); 
-    margin-top: -300px;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    overflow: hidden;
   }
 }
