ajout incrivez vous au login

--- a/src/sass/partials/_form.scss
+++ b/src/sass/partials/_form.scss
@@ -92,5 +92,13 @@
     .form-btn {
         margin-top: 12px;
     }
-    @include button($tertiary-color)
+    @include button($tertiary-color);
+    
+    .txt-noaccount {
+        color: white;
+    }
+
+    .link-login {
+        color: aliceblue;
+    }
 }
