--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -11,6 +11,7 @@ main {
         background-color: $secondary-color;
         padding: 25px;
         border-radius: 10px;
+        margin-top: 10vh;
         h2 {
             color: #fff;
         }
