--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -5,10 +5,13 @@
 @import "./banner";
 
 main {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 50vh;
+        
+        section {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 50vh;
+        }
     
         .box {
         position: relative;
