intégration du footer

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -18,3 +18,9 @@ body{
     font-family: 'Roboto', sans-serif;
     margin: 0 auto;
 }
+div#root {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+}
