--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -5,7 +5,7 @@
 @import "./banner";
 
 main {
-        
+    padding: 50px 0;
         section {
             display: flex;
             justify-content: center;
@@ -18,7 +18,7 @@ main {
         background-color: $secondary-color;
         padding: 25px;
         border-radius: 10px;
-        margin-top: 10vh;
+        margin: 5vh;
         h2 {
             color: #fff;
         }
