--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,6 +6,7 @@ $tertiary-color : rgba(134, 46, 111, 0.469);
 @import './partials/header';
 @import './partials/footer';
 @import './partials/cards';
+@import './partials/media';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @font-face {
@@ -18,4 +19,6 @@ body{
     font-family: 'Roboto', sans-serif;
     margin: 0 auto;
 }
+
+
 
