--- a/src/sass/partials/_navbar.scss
+++ b/src/sass/partials/_navbar.scss
@@ -22,18 +22,18 @@
         color: aliceblue;
         display: flex;
         align-items: center;
-        margin-left: 160px;
+        margin-left: 40px;
       }
   
       .nav-list {
         list-style: none;
-        margin-right: 160px;
         display: flex;
         align-items: center;
+        padding: 0 auto;
+        margin: 0 auto;
   
         .nav-item {
           margin-right: 10px;
-          display: flex;
           align-items: center;
           font-size: 19px;
         }
@@ -54,5 +54,16 @@
           border-radius: 15px;
         }
       }
+
+      .btn-nav {
+        background-color: transparent;
+        border: none;
+        margin-right: 40px;
+      }
+
+      .icon {
+        height: 45px;
+      }
+
     }
-  }
+}
