--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -31,6 +31,7 @@ main {
         flex-wrap: wrap; 
         justify-content: space-around;
         align-items: center;
+        margin-top: 5vh;
         @include card() 
     }  
     .banner{
