--- a/src/sass/partials/_navbar.scss
+++ b/src/sass/partials/_navbar.scss
@@ -36,6 +36,7 @@
           margin-right: 10px;
           align-items: center;
           font-size: 19px;
+          @include button(rgba(223, 38, 38, 0.729))
         }
         
         a {
